fix descriptions and parameter naming for plugin and certificate apis
